@@ -1,4 +1,4 @@
-/*	$NetBSD: remoteconf.h,v 1.1.1.2 2005/02/23 14:54:27 manu Exp $	*/
+/*	$NetBSD: remoteconf.h,v 1.2 2005/05/20 00:54:55 manu Exp $	*/
 
 /* Id: remoteconf.h,v 1.19 2005/01/07 14:22:32 manubsd Exp */
 
@@ -165,6 +165,8 @@ extern struct remoteconf *foreachrmconf __P((rmconf_func_t rmconf_func,
 					     void *data));
 
 extern struct isakmpsa *newisakmpsa __P((void));
+extern struct isakmpsa *dupisakmpsa __P((struct isakmpsa *));
+
 extern void insisakmpsa __P((struct isakmpsa *, struct remoteconf *));
 
 extern void dumprmconf __P((void));
